[workspace]
members = [
    "ip2location-asn",
    "ip2location-bin-format",
    "ip2location-continent-multilingual",
    "ip2location-country-information",
    "ip2location-country-multilingual",
    "ip2location-ip2location",
    "ip2location-ip2proxy",
    "ip2location-iso3166-2",
    "ip2location-olson-timezone",
]
