[package]
name = "ip2location-bin-format"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "IP2Location BIN Format"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ip2location-rs"
homepage = "https://github.com/bk-rs/ip2location-rs"
documentation = "https://docs.rs/ip2location-bin-format"
keywords = []
categories = []
readme = "README.md"
exclude = [
    "/data/**/*.BIN",
    "/data/**/*.ZIP",
    "/data/**/*.CSV",
]

[features]
default = ["chrono", "lru"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }

chrono = { version = "0.4", default-features = false, optional = true }
lru = { version = "0.7", default-features = false, features = ["hashbrown"], optional = true }

[dev-dependencies]
tokio = { version = "1.17", features = ["macros", "rt", "fs"] }
async-compat = { version = "0.2" }

walkdir = { version = "2.3" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
