[package]
name = "ip2location-country-information"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "IP2Location™ Country Information"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ip2location-rs"
homepage = "https://github.com/bk-rs/ip2location-rs"
documentation = "https://docs.rs/ip2location-country-information"
keywords = []
categories = []
readme = "README.md"
exclude = [
    "/data/*.zip",
    "/data/*.ZIP",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["once_cell"]

[dependencies]
serde = { version = "1.0", default_features = false, features = ["std", "derive"] }
csv = { version = "1.1", default_features = false }

country-code = { version = "0.2", default-features = false, features = ["std", "serde"] }
currency-code = { version = "0.2", default-features = false, features = ["std", "serde"] }
language-code = { version = "0.2", default-features = false, features = ["std", "serde"] }

once_cell = { version = "1.10", default_features = false, features = ["std"], optional = true }
