[package]
name = "ip2location-ip2location"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "IP2Location™ IP Address Geolocation Database"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ip2location-rs"
homepage = "https://github.com/bk-rs/ip2location-rs"
documentation = "https://docs.rs/ip2location-ip2location"
keywords = []
categories = []
readme = "README.md"
exclude = [
    "/data/**/*.BIN",
    "/data/**/*.ZIP",
    "/data/**/*.zip",
    "/data/**/*.CSV",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tokio_fs"]

tokio_fs = ["tokio", "async-compat"]
async_fs = ["async-fs"]

_integration_tests = ["tokio_fs"]

[dependencies]
ip2location-bin-format = { version = "0.1", default-features = false, features = ["chrono", "lru"], path = "../ip2location-bin-format" }

serde = { version = "1.0", default_features = false, features = ["std", "derive"] }
serde-field-with = { version = "0.1.2", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }

tokio = { version = "1.17", default-features = false, features = ["fs"], optional = true }
async-compat = { version = "0.2", default-features = false, optional = true }
async-fs = { version = "1.5", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.17", features = ["macros", "rt", "rt-multi-thread"] }

csv = { version = "1.1" }
rand = { version = "0.8" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
denylist = [
    "_integration_tests"
]
skip_feature_sets = [
    ["tokio_fs", "async_fs"],
]
