[package]
name = "ip2location-ip2proxy"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "IP2Proxy™ Proxy Detection Database"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ip2location-rs"
homepage = "https://github.com/bk-rs/ip2location-rs"
documentation = "https://docs.rs/ip2location-ip2proxy"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1.0", default_features = false, features = ["std", "derive"] }
serde-enum-str = { version = "0.2", default-features = false }
chrono = { version = "0.4", default-features = false }
