[package]
name = "ip2location-ip2proxy"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "IP2Proxy™ Proxy Detection Database"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ip2location-rs"
homepage = "https://github.com/bk-rs/ip2location-rs"
documentation = "https://docs.rs/ip2location-ip2proxy"
keywords = []
categories = []
readme = "README.md"
exclude = [
    "/data/**/*.BIN",
    "/data/**/*.ZIP",
    "/data/**/*.zip",
    "/data/**/*.CSV",
]
rust-version = "1.60.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tokio_fs", "serde"]

tokio_fs = ["tokio", "async-compat"]
async_fs = ["async-fs"]

serde = ["dep:serde", "serde-enum-str", "serde-field-with"]

_integration_tests = ["tokio_fs", "serde"]

[dependencies]
ip2location-bin-format = { version = "0.1", default-features = false, features = ["lru"], path = "../ip2location-bin-format" }

futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }

serde = { version = "1.0", default_features = false, features = ["std", "derive"], optional = true }
serde-enum-str = { version = "0.2", default-features = false, optional = true }
serde-field-with = { version = "0.1.2", default-features = false, features = ["std"], optional = true }

tokio = { version = "1.17", default-features = false, features = ["fs"], optional = true }
async-compat = { version = "0.2", default-features = false, optional = true }
async-fs = { version = "1.5", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.17", features = ["macros", "rt", "rt-multi-thread"] }

csv = { version = "1.1" }
rand = { version = "0.8" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
denylist = [
    "_integration_tests"
]
skip_feature_sets = [
    ["tokio_fs", "async_fs"],
]
