[package]
name = "ip2location-olson-timezone"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "IP2Location™ Olson Time Zone Database"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ip2location-rs"
homepage = "https://github.com/bk-rs/ip2location-rs"
documentation = "https://docs.rs/ip2location-olson-timezone"
keywords = []
categories = []
readme = "README.md"

[dependencies]
